# mlir_playground

./: CMakeLists.txt  README.md  concat_compile_commands.sh  run.sh
beer-opt/: CMakeLists.txt  beer-opt.cpp
include/: AIRRtOps.td  CMakeLists.txt
include/emitc/Conversion/: LinalgToEmitC.h  Passes.h  Passes.td
lib/: CMakeLists.txt  MyExtension.cpp  TestAffineMapPass.cpp  ToyTransformPass.cpp
lib/Conversion/LinalgToEmitC/: CMakeLists.txt  LinalgToEmitC.cpp
schumacher-opt/: CMakeLists.txt  schumacher-opt.cpp
test/lib/IR/: CMakeLists.txt  TestPrintNesting.cpp
test/payloads/: emitc.mlir  hello_matmul.mlir  struct.mlir  tiling_conv2d.mlir  transform.mlir
